<resources>
    <string name="app_name">CigarDash</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="action_cart">Cart</string>
    <string name="action_notifications">Notifications</string>
    <string name="item_1">Cigar Of the Month</string>
    <string name="item_2">Bargain Hunter</string>
    <string name="item_3">Cigars</string>
    <string name="item_4">Flavored Cigars</string>
    <string name="item_5">5 Packs</string>
    <string name="item_7">Partner</string>
    <string name="item_6">Speciality</string>
    <string name="my_profile">My Profile</string>
    <string name="my_rewards">My Rewards</string>
    <string name="my_orders">My Orders</string>
    <string name="my_cart">My Cart</string>
    <string name="my_wishlist">My Wishlist</string>
    <string name="my_account">My Account</string>
    <string name="cigar_club">Cigar Club</string>
    <string name="one_month_cost">$24.95 / 1 Month</string>
    <string name="plan">Prepaid</string>
    <string name="membership_details">
        \n* PerPaid
        \n* You will receive 5 handmade high-quality cigars selected by a master blender each month!
        \n\n* Each pack will have a variety of flavours.
        \n\n* We will provide you with a unique opportunity to sample 5 high grade cigars.
    </string>
    <string name="six_months_cost"> $148.95 / 6 Month</string>
    <string name="twelve_months_cost"> $297.95 / 12 Month</string>
    <string name="help_support">Help \u0026 Support</string>
    <string name="contact_us">Contact Us</string>
    <string name="terms_conditions">Terms \u0026 Conditions</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="help_center">Help Center</string>
    <string name="about_us">About Us</string>
    <string name="search_hint">Search for Products, Brands and More</string>
    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>
    <string name="slide_1_title">CigarDash</string>
    <string name="slide_1_desc">Cigars- If we wouldnt smoke it, we don\'t sell it.</string>
    <string name="slide_2_title">Authorised Store</string>
    <string name="slide_2_desc">Pierson Geoffreys store is a Authorised by Authorised.net</string>
    <string name="slide_3_title">Great Offer</string>
    <string name="slide_3_desc">We provide 1 free cigar on buying 1 pack of 5 cigars</string>
    <string name="slide_4_title">Express Home Delivery</string>
    <string name="slide_4_desc">We provide Express home delivery to our customers</string>
    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome
        slider -> clear notificationListingResponse
    </string>
    <string name="play_again">Play Again</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="trems_title"> Terms and Conditions</string>
    <string name="privacy_title">Privacy Policy</string>
    <string name="privacypolicy">

Shopping Privacy:
\n\tYou can shop with Cigar Dash with confidence. We have partnered with Authorize.Net, a leading payment gateway since 1996, to accept credit cards and electronic check payments safely and securely for our customers.
\n\tThe Authorize.Net Payment Gateway manages the complex routing of sensitive customer information through the credit card processing networks.
\n\tThe company adheres to strict industry standards for payment processing, including:
	\n\t\t128-bit Secure Sockets Layer (SSL) technology for secure Internet Protocol (IP) transactions.
	\n\t\tIndustry leading encryption hardware and software methods and security protocols to protect customer information.
	\n\t\tCompliance with the Payment Card Industry Data Security Standard (PCI DSS).
\n\tFor additional information regarding the privacy of your sensitive cardholder notificationListingResponse, please read the Authorize.Net Privacy Policy
\n\tCigar Dash is registered with the Authorize.Net Verified Merchant Seal program.

\nPrivacy Policy:
        \n\t\t Cigar Dash is committed to protecting your privacy.  We do not have affiliates, and we do not sell, share or disclose your information to outside vendors or business relationships.  Your information will be handled with care and will not be used in ways that you have not consented to.
\n\tWe use your email address to send order confirmation emails and invoices. We gather and store the information you enter on the Cigar Dash application. To process your order, we require you to supply us with your billing (credit card), shipping and contact information (email address and phone number). The transfer of this information is secure and cannot be received or read by others. Your credit card information is only shared with our bank for authorization.

\n\tWe gather information about you so that you may quickly navigate our app for products of interest and to place orders. We also gather information so that we can improve your experience on our app. By collecting information, we are able to offer you features (such as login and password information) that save you time during the order process.
       \n\t When you create your account, and during the order process, you are prompted to supply us with your contact, billing, and shipping information. This information must be provided in order to complete a purchase and is used to complete your order and contact you regarding your order.
    </string>
    <string name="shipping">Shipping Policy
\n\tAll orders will be delivered by a cigar dash delivery driver with an hour after the order is received. Orders placed by 3pm will be delivered the same day. Order place after 3pm will be delivered the following morning.


\nReturns
\t\nAll sales are final, No returns. Please contact our customer service department If your cigars arrive damaged or you receive the wrong cigars. Replacement cigars will be sent out free of charge.
</string>
</resources>