<?xml version="1.0" encoding="utf-8"?>
  <LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="@color/black"
    android:layout_marginBottom="10dp"
    android:layout_marginTop="10dp"
    android:layout_marginEnd="20dp"
    android:layout_marginStart="20dp"
    android:layout_height="match_parent">
    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:strokeWidth="1dp"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        android:background="@color/black"
        app:strokeColor="@color/btColor"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/black"
            android:orientation="vertical">
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:gravity="center"
                android:textSize="16sp"
                android:id="@+id/title"
                style="@style/yourstyle"
                android:layout_marginTop="10dp"
                android:text="One Month Membership"/>
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:gravity="center"
                android:textSize="16sp"
                android:id="@+id/amount"

                android:layout_marginTop="10dp"
                android:text="@string/one_month_cost"/>
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:gravity="center"
                android:textSize="16sp"
                android:id="@+id/plan"
                android:layout_marginTop="10dp"
                android:text="@string/plan"/>
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginTop="10dp"
                android:text="@string/membership_details"/>
            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:layout_marginTop="20dp"
                android:layout_gravity="center"
                android:paddingStart="25dp"
                android:paddingEnd="25dp"
                android:layout_marginBottom="20dp"
                android:text="Proceed"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:background="@drawable/corner_rounded"/>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
</LinearLayout>